--- a/package.json
+++ b/package.json
@@ -101,7 +101,7 @@
     "@stdlib/stdlib": "github:stdlib-js/stdlib#develop",
     "archiver": "^1.3.0",
     "babel-core": "^6.11.4",
-    "babel-loader": "^6.2.4",
+    "babel-loader": "^7.0.0",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-resolver": "^1.1.0",
     "babel-plugin-transform-react-constant-elements": "^6.9.1",
@@ -124,21 +124,21 @@
     "compute-variance": "^3.0.0",
     "configstore": "^3.0.0",
     "create-react-class": "^15.5.2",
-    "cross-env": "4.x.x",
+    "cross-env": "5.x.x",
     "css": "^2.2.1",
     "css-loader": "^0.28.0",
     "css-modules-require-hook": "^4.0.0",
     "d3": "^4.7.3",
     "debug-electron": "0.0.4",
-    "dompurify": "^0.8.3",
+    "dompurify": "^0.9.0",
     "electron-window-state": "^4.0.1",
     "element-resize-event": "^2.0.5",
     "esprima-fb": "^15001.1001.0-dev-harmony-fb",
     "extract-text-webpack-plugin": "2.1.0",
-    "fbjs-scripts": "^0.7.1",
+    "fbjs-scripts": "^0.8.0",
     "file-loader": "^0.11.0",
     "fixed-data-table": "^0.6.3",
-    "fs-extra": "^2.0.0",
+    "fs-extra": "^3.0.1",
     "highlight.js": "^9.4.0",
     "jquery": "^3.0.0",
     "js-yaml": "^3.6.1",
@@ -152,20 +152,21 @@
     "moment": "^2.17.1",
     "mustache": "^2.2.1",
     "node-libs-browser": "^2.0.0",
-    "normalize.css": "^6.0.0",
+    "normalize.css": "^7.0.0",
     "prop-types": "^15.5.8",
-    "radium": "^0.18.1",
+    "radium": "^0.19.1",
     "randomstring": "^1.1.5",
     "raw-loader": "^0.5.1",
     "react": "^15.0.1",
-    "react-bootstrap": "^0.30.2",
+    "react-bootstrap": "^0.31.0",
     "react-color": "^2.2.7",
-    "react-copy-to-clipboard": "^4.2.3",
+    "react-copy-to-clipboard": "^5.0.0",
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "^15.0.1",
+    "react-history": "^0.18.2",
     "react-notification-system": "^0.2.7",
-    "react-player": "^0.15.0",
+    "react-player": "^0.18.0",
     "react-redux": "^5.0.1",
     "react-router": "3.0.2",
     "react-router-redux": "^4.0.2",
@@ -180,14 +181,13 @@
     "simplemde": "^1.11.2",
     "source-map-support": "^0.4.0",
     "spectacle": "^2.0.0",
-    "style-loader": "^0.16.1",
+    "style-loader": "^0.18.2",
     "uglify-js": "github:mishoo/UglifyJS2#harmony",
     "uniq": "^1.0.1",
-    "victory": "^0.18.0",
-    "webpack": "^2.2.1"
+    "victory": "^0.21.0",
+    "webpack": "2.6.1"
   },
   "devEngines": {
-    "node": "5.x || 6.x || 7.x",
-    "npm": "2.x || 3.x"
+    "node": "5.x || 6.x || 7.x || 8.x"
   }
 }
