--- a/package.json
+++ b/package.json
@@ -74,12 +74,12 @@
     "concurrently": "^3.0.0",
     "del": "^3.0.0",
     "electron": "1.6.x",
-    "electron-packager": "8.7.1",
+    "electron-packager": "8.7.2",
     "electron-rebuild": "^1.1.3",
     "enzyme": "^2.4.1",
     "eslint": "^4.1.0",
     "eslint-plugin-import": "^2.0.0",
-    "eslint-plugin-jsx-a11y": "^5.0.3",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "7.x.x",
     "express": "^4.13.4",
     "gh-pages": "^1.0.0",
@@ -150,7 +150,7 @@
     "lodash.flow": "^3.5.0",
     "markdown-it": "^8.0.0",
     "minimist": "^1.2.0",
-    "moment": "^2.17.1",
+    "moment": "^2.18.1",
     "mustache": "^2.2.1",
     "node-libs-browser": "^2.0.0",
     "normalize.css": "^7.0.0",
@@ -158,13 +158,15 @@
     "radium": "^0.19.1",
     "randomstring": "^1.1.5",
     "raw-loader": "^0.5.1",
-    "react": "^15.0.1",
+    "react": "^15.6.1",
+    "react-addons-shallow-compare": "^15.6.0",
     "react-bootstrap": "^0.31.0",
     "react-color": "^2.2.7",
     "react-copy-to-clipboard": "^5.0.0",
+    "react-dates": "^12.2.2",
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
-    "react-dom": "^15.0.1",
+    "react-dom": "^15.6.1",
     "react-history": "^0.18.2",
     "react-notification-system": "^0.2.7",
     "react-player": "^0.18.0",
