--- a/package.json
+++ b/package.json
@@ -98,10 +98,10 @@
     "webpack-hot-middleware": "^2.10.0"
   },
   "dependencies": {
-    "@stdlib/stdlib": "github:stdlib-js/stdlib#develop",
+    "@stdlib/stdlib": "0.0.3",
     "archiver": "^1.3.0",
     "babel-core": "6.25.0",
-    "babel-loader": "7.1.0",
+    "babel-loader": "7.1.1",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-resolver": "^1.1.0",
     "babel-plugin-transform-react-constant-elements": "^6.9.1",
@@ -191,7 +191,7 @@
     "uniq": "^1.0.1",
     "utf-8-validate": "^3.0.2",
     "victory": "^0.21.0",
-    "webpack": "2.6.1"
+    "webpack": "3.0.0"
   },
   "devEngines": {
     "node": "5.x || 6.x || 7.x || 8.x"
