--- a/package.json
+++ b/package.json
@@ -98,7 +98,7 @@
     "webpack-hot-middleware": "^2.10.0"
   },
   "dependencies": {
-    "@stdlib/stdlib": "0.0.3",
+    "@stdlib/stdlib": "github:stdlib-js/stdlib#develop",
     "archiver": "^1.3.0",
     "babel-core": "6.25.0",
     "babel-loader": "7.1.1",
@@ -180,7 +180,7 @@
     "recordrtc": "^5.4.1",
     "redux": "^3.4.0",
     "redux-thunk": "^2.0.1",
-    "request": "2.57.0",
+    "request": "2.81.0",
     "semver": "^5.1.0",
     "simplemde": "^1.11.2",
     "socket.io-client": "^2.0.3",
