--- a/package.json
+++ b/package.json
@@ -139,6 +139,7 @@
     "fbjs-scripts": "^0.8.0",
     "file-loader": "^0.11.0",
     "fixed-data-table": "^0.6.3",
+    "form-data": "^2.2.0",
     "fs-extra": "^3.0.1",
     "highlight.js": "^9.4.0",
     "jquery": "^3.0.0",
