--- a/package.json
+++ b/package.json
@@ -174,6 +174,7 @@
     "react-redux": "^5.0.1",
     "react-router": "4.1.1",
     "react-router-dom": "^4.1.1",
+    "react-select": "^1.0.0-rc.5",
     "react-slick": "^0.14.6",
     "react-split-pane": "^0.1.42",
     "react-tools": "^0.13.3",
