--- a/package.json
+++ b/package.json
@@ -176,7 +176,7 @@
     "react-router-dom": "^4.1.1",
     "react-select": "^1.0.0-rc.5",
     "react-slick": "^0.14.6",
-    "react-split-pane": "^0.1.42",
+    "react-split-pane": "0.1.62",
     "react-tools": "^0.13.3",
     "rebass": "^0.3.1",
     "recordrtc": "^5.4.1",
