--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "electron": "1.6.x",
     "electron-packager": "8.7.2",
     "electron-rebuild": "^1.1.3",
-    "enzyme": "^2.4.1",
+    "enzyme": "2.9.x",
     "eslint": "^4.1.0",
     "eslint-plugin-import": "^2.0.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
@@ -87,7 +87,8 @@
     "istanbul": "^1.1.0-alpha.1",
     "jsdom": "^11.0.0",
     "modclean": "^2.0.0",
-    "react-addons-test-utils": "^15.0.1",
+    "react-dom": "^15.6.1",
+    "react-test-renderer": "^15.6.1",
     "redux-devtools": "^3.2.0",
     "redux-devtools-dock-monitor": "^1.1.1",
     "redux-devtools-log-monitor": "^1.0.11",
@@ -135,7 +136,7 @@
     "electron-window-state": "^4.0.1",
     "element-resize-event": "^2.0.5",
     "esprima-fb": "^15001.1001.0-dev-harmony-fb",
-    "extract-text-webpack-plugin": "2.1.2",
+    "extract-text-webpack-plugin": "3.0.0",
     "fbjs-scripts": "^0.8.0",
     "file-loader": "^0.11.0",
     "fixed-data-table": "^0.6.3",
@@ -156,7 +157,7 @@
     "mustache": "^2.2.1",
     "node-libs-browser": "^2.0.0",
     "normalize.css": "^7.0.0",
-    "prop-types": "^15.5.8",
+    "prop-types": "^15.5.10",
     "radium": "^0.19.1",
     "randomstring": "^1.1.5",
     "raw-loader": "^0.5.1",
@@ -168,7 +169,7 @@
     "react-dates": "^12.2.2",
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
-    "react-dom": "^15.6.1",
+    "react-dom": "15.6.1",
     "react-history": "^0.18.2",
     "react-notification-system": "^0.2.7",
     "react-player": "^0.19.0",
@@ -177,7 +178,7 @@
     "react-router-dom": "^4.1.1",
     "react-select": "^1.0.0-rc.5",
     "react-slick": "^0.14.6",
-    "react-split-pane": "0.1.62",
+    "react-split-pane": "0.1.65",
     "react-tools": "^0.13.3",
     "rebass": "^1.0.0",
     "recordrtc": "^5.4.1",
