--- a/package.json
+++ b/package.json
@@ -193,6 +193,7 @@
     "uglify-es": "^3.0.15",
     "uniq": "^1.0.1",
     "utf-8-validate": "^3.0.2",
+    "venn.js": "^0.2.14",
     "victory": "^0.21.0",
     "webpack": "3.3.0"
   },
