--- a/package.json
+++ b/package.json
@@ -157,6 +157,7 @@
     "mustache": "^2.2.1",
     "node-libs-browser": "^2.0.0",
     "normalize.css": "^7.0.0",
+    "plotly.js": "^1.29.2",
     "prop-types": "^15.5.10",
     "radium": "^0.19.1",
     "randomstring": "^1.1.5",
