--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "codecov": "^2.1.0",
     "concurrently": "^3.0.0",
     "del": "^3.0.0",
-    "electron": "1.6.x",
+    "electron": "1.7.6",
     "electron-packager": "8.7.2",
     "electron-rebuild": "^1.1.3",
     "enzyme": "2.9.x",
@@ -192,14 +192,14 @@
     "simplemde": "^1.11.2",
     "socket.io-client": "^2.0.3",
     "source-map-support": "^0.4.0",
-    "spectacle": "2.1.2",
+    "spectacle": "2.2.0",
     "style-loader": "^0.18.2",
     "uglify-es": "^3.0.15",
     "uniq": "^1.0.1",
     "utf-8-validate": "^3.0.2",
     "venn.js": "^0.2.14",
     "victory": "^0.21.0",
-    "webpack": "3.4.1"
+    "webpack": "3.5.2"
   },
   "devEngines": {
     "node": "5.x || 6.x || 7.x || 8.x"
