--- a/package.json
+++ b/package.json
@@ -165,6 +165,7 @@
     "randomstring": "^1.1.5",
     "raw-loader": "^0.5.1",
     "react": "^15.6.1",
+    "react-ab-test": "^2.0.1",
     "react-addons-shallow-compare": "^15.6.0",
     "react-bootstrap": "^0.31.0",
     "react-color": "^2.2.7",
