--- a/package.json
+++ b/package.json
@@ -160,6 +160,7 @@
     "node-libs-browser": "^2.0.0",
     "normalize.css": "^7.0.0",
     "plotly.js": "^1.29.2",
+    "profanities": "^2.5.0",
     "prop-types": "^15.5.10",
     "radium": "^0.19.1",
     "randomstring": "^1.1.5",
@@ -169,6 +170,7 @@
     "react-addons-shallow-compare": "^15.6.0",
     "react-bootstrap": "^0.31.0",
     "react-color": "^2.2.7",
+    "react-contextmenu": "^2.6.5",
     "react-copy-to-clipboard": "^5.0.0",
     "react-dates": "^12.2.2",
     "react-dnd": "^2.1.4",
