--- a/package.json
+++ b/package.json
@@ -141,7 +141,6 @@
     "extract-text-webpack-plugin": "3.0.0",
     "fbjs-scripts": "^0.8.0",
     "file-loader": "^0.11.0",
-    "fixed-data-table": "^0.6.3",
     "font-awesome": "^4.7.0",
     "form-data": "^2.2.0",
     "fs-extra": "^4.0.0",
@@ -181,11 +180,12 @@
     "react-notification-system": "^0.2.7",
     "react-player": "^0.20.0",
     "react-redux": "^5.0.1",
-    "react-router": "4.1.2",
+    "react-router": "4.2.0",
     "react-router-dom": "^4.1.1",
     "react-select": "^1.0.0-rc.5",
-    "react-slick": "^0.14.6",
+    "react-slick": "^0.15.0",
     "react-split-pane": "0.1.66",
+    "react-table": "^6.5.3",
     "react-tools": "^0.13.3",
     "recordrtc": "^5.4.1",
     "redux": "^3.4.0",
@@ -195,7 +195,7 @@
     "simplemde": "^1.11.2",
     "socket.io-client": "^2.0.3",
     "source-map-support": "^0.4.0",
-    "spectacle": "2.2.0",
+    "spectacle": "2.2.2",
     "style-loader": "^0.18.2",
     "uglify-es": "^3.0.15",
     "uniq": "^1.0.1",
