--- a/package.json
+++ b/package.json
@@ -115,12 +115,12 @@
     "bootstrap": "^3.3.6",
     "brace": "https://github.com/Planeshifter/brace.git",
     "bufferutil": "^3.0.1",
-    "compute-iqr": "^1.1.0",
     "compute-max": "^1.0.1",
     "compute-mean": "^3.0.0",
     "compute-median": "^2.0.0",
     "compute-min": "^1.0.1",
     "compute-pcorr": "^1.0.0",
+    "compute-quantile": "^1.0.1",
     "compute-range": "^1.1.0",
     "compute-stdev": "^1.0.0",
     "compute-variance": "^3.0.0",
