--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "build-main": "cross-env NODE_ENV=production node --max_old_space_size=4096 -r babel-register ./node_modules/webpack/bin/webpack --config webpack.config.electron.js --progress --profile --colors",
     "build-renderer": "cross-env NODE_ENV=production node --max_old_space_size=4096 -r babel-register ./node_modules/webpack/bin/webpack --config webpack.config.production.js --progress --profile --colors",
     "build": "npm run build-main && npm run build-renderer",
-    "start": "cross-env NODE_ENV=production electron ./",
-    "start-hot": "cross-env HOT=1 NODE_ENV=development DEBUG=isle-editor electron -r babel-register ./main.development",
+    "start": "cross-env NODE_ENV=production NODE_TLS_REJECT_UNAUTHORIZED=0 electron ./",
+    "start-hot": "cross-env HOT=1 NODE_ENV=development NODE_TLS_REJECT_UNAUTHORIZED=0 DEBUG=isle-editor electron -r babel-register ./main.development",
     "package": "cross-env NODE_ENV=production node -r babel-register package.js",
     "package-all": "npm run package -- --all",
     "postinstall": "node node_modules/fbjs-scripts/node/check-dev-engines.js package.json && npm run build",
