--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "bootstrap": "^3.3.6",
     "brace": "https://github.com/Planeshifter/brace.git",
     "bufferutil": "^3.0.1",
+    "compute-iqr": "^1.1.0",
     "compute-max": "^1.0.1",
     "compute-mean": "^3.0.0",
     "compute-median": "^2.0.0",
