--- a/package.json
+++ b/package.json
@@ -73,10 +73,10 @@
     "codecov": "^2.1.0",
     "concurrently": "^3.0.0",
     "del": "^3.0.0",
-    "electron": "1.7.6",
+    "electron": "1.7.8",
     "electron-packager": "8.7.2",
     "electron-rebuild": "^1.1.3",
-    "enzyme": "2.9.x",
+    "enzyme": "3.0.0",
     "eslint": "^4.1.0",
     "eslint-plugin-import": "^2.0.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
@@ -87,8 +87,8 @@
     "istanbul": "^1.1.0-alpha.1",
     "jsdom": "^11.0.0",
     "modclean": "^2.0.0",
-    "react-dom": "^15.6.1",
-    "react-test-renderer": "^15.6.1",
+    "react-dom": "15.6.1",
+    "react-test-renderer": "15.6.1",
     "redux-devtools": "^3.2.0",
     "redux-devtools-dock-monitor": "^1.1.1",
     "redux-devtools-log-monitor": "^1.0.11",
@@ -135,7 +135,7 @@
     "css-modules-require-hook": "^4.0.0",
     "csv-parse": "^1.2.1",
     "d3": "^4.7.3",
-    "debug": "^3.0.1",
+    "debug": "^3.1.0",
     "detect-csv": "^1.1.0",
     "dompurify": "^1.0.1",
     "electron-window-state": "^4.0.1",
@@ -167,7 +167,7 @@
     "radium": "^0.19.1",
     "randomstring": "^1.1.5",
     "raw-loader": "^0.5.1",
-    "react": "^15.6.1",
+    "react": "15.6.1",
     "react-ab-test": "^2.0.1",
     "react-addons-shallow-compare": "^15.6.0",
     "react-bootstrap": "^0.31.0",
@@ -194,7 +194,7 @@
     "recordrtc": "^5.4.1",
     "redux": "^3.4.0",
     "redux-thunk": "^2.0.1",
-    "request": "2.82.0",
+    "request": "2.83.0",
     "semver": "^5.1.0",
     "simplemde": "^1.11.2",
     "socket.io-client": "^2.0.3",
