--- a/package.json
+++ b/package.json
@@ -174,6 +174,7 @@
     "react-color": "^2.2.7",
     "react-contextmenu": "^2.6.5",
     "react-copy-to-clipboard": "^5.0.0",
+    "react-d3-cloud": "^0.5.0",
     "react-dates": "12.7.0",
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
