--- a/package.json
+++ b/package.json
@@ -148,6 +148,7 @@
     "form-data": "^2.2.0",
     "fs-extra": "^4.0.0",
     "highlight.js": "^9.4.0",
+    "immutability-helper": "^2.4.0",
     "jquery": "^3.0.0",
     "js-yaml": "^3.6.1",
     "json-loader": "^0.5.4",
