--- a/.babelrc
+++ b/.babelrc
@@ -5,7 +5,8 @@
      "stage-0"
   ],
   "plugins": [
-    "add-module-exports"
+    "add-module-exports",
+    "transform-react-jsx"
   ],
   "env": {
     "development": {
