--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "babel": "^6.5.2",
     "babel-eslint": "^8.0.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-plugin-webpack-loaders": "^0.9.0",
     "babel-polyfill": "^6.7.4",
     "babel-preset-es2015-loose": "^8.0.0",
@@ -107,6 +108,7 @@
     "babel-plugin-resolver": "^1.1.0",
     "babel-plugin-transform-react-constant-elements": "^6.9.1",
     "babel-plugin-transform-react-inline-elements": "^6.22.0",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.11.1",
