--- a/package.json
+++ b/package.json
@@ -146,6 +146,7 @@
     "extract-text-webpack-plugin": "3.0.2",
     "fbjs-scripts": "^0.8.0",
     "file-loader": "^1.1.5",
+    "file-saver": "^1.3.3",
     "font-awesome": "^4.7.0",
     "form-data": "^2.2.0",
     "fs-extra": "^4.0.0",
