--- a/package.json
+++ b/package.json
@@ -118,6 +118,7 @@
     "bootstrap": "^3.3.6",
     "brace": "https://github.com/Planeshifter/brace.git",
     "bufferutil": "^3.0.1",
+    "camelcase": "^4.1.0",
     "compute-chunkify": "git+https://github.com/compute-io/chunkify.git",
     "compute-iqr": "^1.1.0",
     "compute-max": "^1.0.1",
