--- a/.eslintrc
+++ b/.eslintrc
@@ -6,40 +6,309 @@
     "node": true
   },
   "rules": {
-    "array-bracket-spacing": [ "error", "always" ],
+    "accessor-pairs": [ 2, { "setWithoutGet": true, "getWithoutSet": false } ],
+    "array-backet-newline": [ "off", { "multiline": true, "minItems": null } ],
+    "array-bracket-spacing": [ "off", { 
+      "singleValue": true, 
+      "objectsInArrays": false, 
+      "arraysInArrays": false 
+    } ],
+    "array-callback-return": 2,
+    "array-element-newline": [ 0, { "multiline": true, "minItems": null } ],
+    "block-spacing": [ 2, "always" ],
+    "brace-style": [ 2, "1tbs", {
+      "allowSingleLine": true
+    }],
+    "callback-return": [ 1, [
+      "callback",
+      "clbk",
+      "cb",
+      "done",
+      "next"
+    ]],
+    "camelcase": [ 2, {
+      "properties": "never"
+    }],
+    "capitalized-comments": [ 1, "always", { 
+      "ignoreInlineComments": true
+    }],
+    "comma-dangle": [ 2, "never" ],
+    "comma-spacing": [ 2, {
+      "before": false,
+      "after": true
+    }],
+    "comma-style": [ 2, "last" ],
     "consistent-return": 0,
-    "comma-dangle": 0,
-    "computed-property-spacing": [ "error", "always" ],
-    "default-case": 0,
-    "no-underscore-dangle": 0,
-    "no-use-before-define": 0,
-    "no-unused-vars": [ "error", { "varsIgnorePattern": "React", "args": "none" } ],
-    "one-var": [ "error", "never" ],
+    "consistent-this": [ 2, "self" ],
+    "computed-property-spacing": [ "off", "always" ],
+    "curly": 1,
+    "default-case": 2,
+    "eqeqeq": [ 2, "always" ],
+    "eol-last": [ 2, "always" ],
+    "for-direction": 2,
+    "func-call-spacing": [ 2, "never" ],
+    "func-name-matching": 0,
+    "func-names": [ 2, "always" ],
+    "func-style": [ 2, "declaration", {
+      "allowArrowFunctions": true
+    }],
+    "global-require": 0,
+    "guard-for-in": 2,
+    "handle-callback-err": [ 0, "^(err|error)$" ],
+    "id-blacklist": 0,
+    "id-length": [ 1, {
+      "min": 1,
+      "max": 25,
+      "properties": "never"
+    }],
+    "id-match": 0,
     "import/no-unresolved": [ 2, {
       "ignore": [ "electron" ],
       "commonjs": true
     }],
-    "react/jsx-no-bind": 0,
-    "react/jsx-uses-vars": "error",
-    "react/prefer-stateless-function": 0,
-    "semi": [ 2, "always" ],
-    "semi-spacing": [ 2, {
-      "before": false,
-      "after": true
+    "indent": [ 2, "tab" ],
+    "key-spacing": [ 2, {
+      "beforeColon": false,
+      "afterColon": true,
+      "mode": "strict"
     }],
-    "keyword-spacing": [ "error", {
+    "keyword-spacing": [ 2, {
       "before": true,
       "after": true
     }],
-    "indent": [ 2, "tab" ],
-    "prefer-template": 0,
-    "space-in-parens": [ 2, "always", {
-      "exceptions": [ "{}", "[]", "empty" ]
+    "line-comment-position": 0,
+    "linebreak-style": 0,
+    "lines-around-comment": 0,
+    "max-depth": [ 2, { "max": 5 } ],
+    "max-len": 0,
+    "max-lines": [ 1, {
+      "max": 1000,
+      "skipBlankLines": true,
+      "skipComments": true
     }],
+    "max-nested-callbacks": [ 2, {
+      "max": 3
+    }],
+    "max-params": [ 2, {
+      "max": 10
+    }],
+    "max-statements-per-line": [ 2, {
+      "max": 1
+    }],
+    "max-statements": [ 1, {
+      "max": 300
+    }],
+    "multiline-ternary": 0,
+    "new-cap": [ 2, {
+      "newIsCap": false,
+      "capIsNew": true,
+      "properties": true
+    }],
+    "new-parens": 2,
+    "newline-per-chained-call": 1,
+    "no-alert": 1,
+    "no-array-constructor": 2,
+    "no-await-in-loop": 1,
+    "no-bitwise": 0,
+    "no-buffer-constructor": 1,
+    "no-caller": 2,
+    "no-case-declarations": 2,
+    "no-catch-shadow": 2,
+    "no-compare-neg-zero": 2,
+    "no-cond-assign": [ 2, "always" ],
+    "no-console": 1,
+    "no-constant-condition": [ 2, { "checkLoops": false } ],
+    "no-continue": 0,
+    "no-control-regex": 2,
+    "no-debugger": 2,
+    "no-delete-var": 2,
+    "no-div-regex": 2,
+    "no-dupe-args": 2,
+    "no-dupe-keys": 2,
+    "no-duplicate-case": 2,
+    "no-else-return": 2,
+    "no-empty-character-class": 2,
+    "no-empty-function": 0,
+    "no-empty-pattern": 2,
+    "no-empty": 2,
+    "no-eq-null": 2,
+    "no-eval": 2,
+    "no-ex-assign": 2,
+    "no-extend-native": 2,
+    "no-extra-bind": 2,
+    "no-extra-boolean-cast": 2,
+    "no-extra-label": 2,
+    "no-extra-parens": [ 2, "functions" ],
+    "no-extra-semi": 2,
+    "no-fallthrough": 2,
+    "no-floating-decimal": 2,
+    "no-func-assign": 2,
+    "no-global-assign": 2,
+    "no-implicit-coercion": 0,
+    "no-implicit-globals": 0,
+    "no-implied-eval": 2,
+    "no-inline-comments": 0,
+    "no-invalid-this": 0,
+    "no-inner-declarations": 1,
+    "no-invalid-regexp": 2,
+    "no-irregular-whitespace": 2,
+    "no-iterator": 2,
+    "no-label-var": 2,
+    "no-labels": [ 2, { "allowLoop": false, "allowSwitch": false }],
+    "no-lone-blocks": 2,
+    "no-lonely-if": 2,
+    "no-loop-func": 2,
+    "no-magic-numbers": 0,
+    "no-mixed-operators": 0,
+    "no-mixed-spaces-and-tabs": 2,
+    "no-multiple-empty-lines": [ 2, {
+      "max": 2,
+      "maxEOF": 1,
+      "maxBOF": 1
+    }],
+    "no-multi-spaces": [ 2, { "ignoreEOLComments": true }],
+    "no-multi-str": 2,
+    "no-nested-ternary": 2,
+    "no-new-func": 2,
+    "no-new-object": 2,
+    "no-new-require": 2,
+    "no-new-wrappers": 2,
+    "no-new": 2,
+    "no-obj-calls": 2,
+    "no-octal-escape": 2,
+    "no-octal": 2,
+    "no-param-reassign": 0,
+    "no-path-concat": 0,
+    "no-process-env": 2,
+    "no-process-exit": 1,
+    "no-prototype-builtins": 2,
+    "no-proto": 2,
+    "no-redeclare": 2,
+    "no-regex-spaces": 2,
+    "no-restricted-globals": [ 2, "event", "fdescribe" ],
+    "no-return-assign": [ 2, "always" ],
+    "no-return-await": 2,
+    "no-shadow-restricted-names": 2,
+    "no-shadow": 0,
+    "no-script-url": 2,
+    "no-self-assign": 2,
+    "no-self-compare": 0,
+    "no-sequences": 2,
+    "no-sparse-arrays": 2,
+    "no-sync": 0,
+    "no-tabs": 0,
+    "no-ternary": 0,
+    "no-template-curly-in-string": 1,
+    "no-throw-literal": 2,
+    "no-trailing-spaces": [ 2, { "skipBlankLines": false }],
+    "no-undef-init": 2,
+    "no-undef": 2,
+    "no-undefined": 2,
+    "no-unexpected-multiline": 2,
+    "no-underscore-dangle": 0,
+    "no-unmodified-loop-condition": 0,
+    "no-unreachable": 2,
+    "no-unsafe-finally": 2,
+    "no-unsafe-negation": 1,
+    "no-unused-expressions": [ 2, {
+      "allowShortCircuit": false,
+      "allowTernary": false
+    }],
+    "no-unused-labels": 2,
+    "no-unused-vars": [ 2, { "varsIgnorePattern": "React", "args": "none" } ],
+    "no-use-before-define": [ 2, {
+      "functions": false,
+      "classes": false
+    }],
+    "no-useless-call": 2,
+    "no-useless-concat": 2,
+    "no-useless-escape": 2,
+    "no-useless-return": 2,
+    "no-void": 0,
+    "no-whitespace-before-property": 2,
+    "no-with": 2,
+    "nonblock-statement-body-position": 2,
+    "object-curly-spacing": [ 1, "always", { "objectsInObjects": false, "arraysInObjects": false }],
+    "object-property-newline": [ 2, { "allowMultiplePropertiesPerLine": true }],
+    "one-var": [ 2, "never" ],
+    "operator-linebreak": [ 2, "after" ],
+    "padded-blocks": [ 2, "never" ],
+    "prefer-template": 0,
+    "quotes": [ 2, "single", { "avoidEscape": true }],
+    "radix": [ 2, "always" ],
+    "require-await": 2,
+    "semi":  [ 2, "always" ],
+    "semi-spacing": [ 2, {
+      "before": false,
+      "after": true 
+    }],
+    "semi-style": [ 2, "last" ],
+    "space-before-function-paren": [ 2, { "anonymous": "always", "named" : "never", "asyncArrow": "always" }],
+    "space-in-parens": 0,
+    "space-infix-ops": 0,
+    "space-unary-ops": [ 2, { "words": true, "nonwords" : false }],
+    "spaced-comment": [ 2, "always", {
+      "block": {
+        "balanced": true
+      }
+    }],
+    "switch-colon-spacing": [ 2, {
+      "before": false,
+      "after": true
+    }],
+    "template-tag-spacing": [ 2, "never" ],
+    "unicode-bom": 0,
+    "use-isnan": 2,
+    "valid-typeof": [ 2, { "requireStringLiterals": true } ],
+    "wrap-iife": [ 2, "inside" ],
+    "wrap-regex": 0,
+    "yoda": [ 2, "never", { "exceptRange": true } ],
+    "react/default-props-match-prop-types": 2,
+    "react/no-danger": 2,
+    "react/no-deprecated": 2,
+    "react/no-did-mount-set-state": 1,
+    "react/no-did-update-set-state": 1,
+    "react/no-direct-mutation-state": 2,
+    "react/no-typos": 2,
+    "react/no-string-refs": 2,
+    "react/no-unescaped-entities": 1,
+    "react/no-unknown-property": 2,
+    "react/no-unused-prop-types": 2,
+    "react/no-unused-state": 2,
+    "react/prefer-es6-class": [ 2, "always" ],
+    "react/prefer-stateless-function": 0,
+    "react/prop-types": [ 2, {
+      "ignore": [ "children", "id" ]
+    } ],
+    "react/require-default-props": 2,
+    "react/require-render-return": 2,
+    "react/sort-comp": 1,
+    "react/sort-prop-types": 2,
+    "react/void-dom-elements-no-children": 2,
+    "react/jsx-closing-bracket-location": 0,
+    "react/jsx-closing-tag-location": 0,
+    "react/jsx-curly-spacing": [ 2, "never" ],
+    "react/jsx-equals-spacing": [ 2, "never" ],
     "react/jsx-indent-props": [ 2, "tab" ],
     "react/jsx-indent": [ 0, "tab" ],
-    "react/prop-types": 2,
-    "wrap-regex": 0
+    "react/jsx-key": 2,
+    "react/jsx-no-bind": 0,
+    "react/jsx-no-comment-textnodes": 2,
+    "react/jsx-no-duplicate-props": 2,
+    "react/jsx-no-undef": 2,
+    "react/jsx-pascal-case": 2,
+    "react/jsx-space-before-closing": 2,
+    "react/jsx-uses-react": 2,
+    "react/jsx-uses-vars": 2,
+    "react/jsx-wrap-multilines": [ 2, {
+      "declaration": "ignore",
+      "assignment": "ignore",
+      "return": "parens",
+      "arrow": "parens",
+      "condition": "ignore",
+      "logical": "ignore",
+      "prop": "ignore"
+    } ]
   },
   "plugins": [
     "import",
