--- a/.eslintrc
+++ b/.eslintrc
@@ -297,7 +297,9 @@
     "react/jsx-no-duplicate-props": 2,
     "react/jsx-no-undef": 2,
     "react/jsx-pascal-case": 2,
-    "react/jsx-space-before-closing": 2,
+    "react/jsx-tag-spacing": [ 2, {
+      "beforeSelfClosing": "always"
+    }],
     "react/jsx-uses-react": 2,
     "react/jsx-uses-vars": 2,
     "react/jsx-wrap-multilines": [ 2, {
