--- a/package.json
+++ b/package.json
@@ -210,6 +210,7 @@
     "source-map-support": "^0.5.0",
     "spectacle": "4.0.4",
     "style-loader": "^0.19.0",
+    "svg-react-loader": "^0.4.5",
     "uglify-es": "3.2.2",
     "uniq": "^1.0.1",
     "utf-8-validate": "^4.0.0",
