--- a/.eslintrc
+++ b/.eslintrc
@@ -41,7 +41,7 @@
     "consistent-return": 0,
     "consistent-this": [ 2, "self" ],
     "computed-property-spacing": [ "off", "always" ],
-    "curly": 1,
+    "curly": [ 1, "multi-line" ],
     "default-case": 0,
     "eqeqeq": [ 2, "always" ],
     "eol-last": [ 2, "always" ],
