--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
     "brace": "https://github.com/Planeshifter/brace.git",
     "bufferutil": "^3.0.1",
     "camelcase": "^4.1.0",
+    "component-playground": "^3.0.0",
     "compute-chunkify": "git+https://github.com/compute-io/chunkify.git",
     "compute-iqr": "^1.1.0",
     "compute-max": "^1.0.1",
