--- a/package.json
+++ b/package.json
@@ -117,7 +117,7 @@
     "babel-runtime": "^6.9.2",
     "bl": "^1.2.0",
     "bootstrap": "^3.3.6",
-    "brace": "https://github.com/Planeshifter/brace.git",
+    "brace": "git+https://github.com/Planeshifter/brace.git",
     "bufferutil": "^3.0.1",
     "camelcase": "^4.1.0",
     "component-playground": "^3.0.0",
