--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "package-all": "npm run package -- --all",
     "postinstall": "node node_modules/fbjs-scripts/node/check-dev-engines.js package.json && npm run build",
     "init-docs": "gitbook install",
-    "publish-docs": "gitbook build && echo \"isledocs.com\" > _book/CNAME && gh-pages --dist _book",
+    "publish-docs": "gitbook build && echo isledocs.com > _book/CNAME && gh-pages --dist _book",
     "view-cov": "xdg-open ./reports/coverage/lcov-report/index.html",
     "view-docs": "concurrently --kill-others \"gitbook serve\" \"sensible-browser http://localhost:4000\"",
     "dev": "concurrently --kill-others \"npm run hot-server\" \"npm run start-hot\""
@@ -154,6 +154,8 @@
     "font-awesome": "^4.7.0",
     "form-data": "^2.2.0",
     "fs-extra": "^5.0.0",
+    "gitbook-plugin-edit-link": "^2.0.2",
+    "gitbook-plugin-prism": "^2.3.0",
     "highlight.js": "^9.4.0",
     "immutability-helper": "^2.4.0",
     "jquery": "^3.0.0",
