--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "electron-packager": "10.1.0",
     "electron-rebuild": "^1.1.3",
     "enzyme": "3.2.0",
-    "eslint": "^4.1.0",
+    "eslint": "^4.14.0",
     "eslint-plugin-import": "^2.0.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "7.x.x",
@@ -92,12 +92,12 @@
     "react-dom": "16.2.0",
     "react-test-renderer": "16.2.0",
     "redux-devtools": "^3.2.0",
-    "redux-devtools-dock-monitor": "^1.1.1",
+    "redux-devtools-dock-monitor": "^1.1.3",
     "redux-devtools-log-monitor": "^1.0.11",
     "redux-logger": "^3.0.0",
     "tap-spec": "^4.1.1",
     "tape": "^4.6.0",
-    "webpack-dev-middleware": "^2.0.1",
+    "webpack-dev-middleware": "^2.0.3",
     "webpack-hot-middleware": "^2.10.0"
   },
   "dependencies": {
@@ -133,13 +133,13 @@
     "compute-stdev": "^1.0.0",
     "compute-variance": "^3.0.0",
     "configstore": "^3.0.0",
-    "cross-env": "5.x.x",
+    "cross-env": "^5.1.3",
     "css": "^2.2.1",
     "css-loader": "^0.28.0",
     "css-modules-require-hook": "^4.0.0",
     "csv-parse": "^2.0.0",
     "csv-stringify": "^2.0.0",
-    "d3": "^4.7.3",
+    "d3": "4.12.0",
     "debug": "^3.1.0",
     "detect-csv": "^1.1.0",
     "dompurify": "^1.0.1",
@@ -200,7 +200,7 @@
     "react-select": "^1.0.0-rc.5",
     "react-slick": "^0.16.0",
     "react-split-pane": "0.1.74",
-    "react-table": "^6.5.3",
+    "react-table": "^6.7.6",
     "react-tools": "^0.13.3",
     "recordrtc": "^5.4.1",
     "redux": "^3.4.0",
@@ -213,7 +213,7 @@
     "spectacle": "4.0.4",
     "style-loader": "^0.19.0",
     "svg-react-loader": "^0.4.5",
-    "uglify-es": "3.3.0",
+    "uglify-es": "3.2.2",
     "uniq": "^1.0.1",
     "utf-8-validate": "^4.0.0",
     "venn.js": "0.2.18",
