--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "istanbul": "^1.1.0-alpha.1",
     "jsdom": "^11.0.0",
     "modclean": "^2.0.0",
+    "null-loader": "^0.1.1",
     "react-test-renderer": "16.2.0",
     "redux-devtools": "^3.2.0",
     "redux-devtools-dock-monitor": "^1.1.3",
