--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
   "homepage": "https://github.com/Planeshifter/isle-editor#readme",
   "devDependencies": {
     "babel": "^6.5.2",
-    "babel-eslint": "8.1.2",
+    "babel-eslint": "8.2.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-webpack-loaders": "^0.9.0",
     "babel-polyfill": "^6.7.4",
@@ -78,7 +78,7 @@
     "electron-packager": "10.1.1",
     "electron-rebuild": "^1.1.3",
     "enzyme": "3.3.0",
-    "eslint": "^4.14.0",
+    "eslint": "^4.15.0",
     "eslint-plugin-import": "^2.0.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "7.x.x",
@@ -96,13 +96,13 @@
     "redux-logger": "^3.0.0",
     "tap-spec": "^4.1.1",
     "tape": "^4.6.0",
-    "webpack-dev-middleware": "^2.0.3",
+    "webpack-dev-middleware": "^2.0.4",
     "webpack-hot-middleware": "^2.10.0"
   },
   "dependencies": {
     "@planeshifter/brace": "^0.8.0",
     "@stdlib/stdlib": "0.0.30",
-    "archiver": "^2.0.0",
+    "archiver": "^2.1.1",
     "babel-core": "6.26.0",
     "babel-loader": "7.1.2",
     "babel-plugin-add-module-exports": "^0.2.1",
@@ -135,7 +135,7 @@
     "cross-env": "^5.1.3",
     "css": "^2.2.1",
     "css-loader": "^0.28.0",
-    "css-modules-require-hook": "^4.0.0",
+    "css-modules-require-hook": "^4.2.3",
     "csv-parse": "^2.0.0",
     "csv-stringify": "^2.0.0",
     "d3": "4.12.0",
@@ -157,7 +157,7 @@
     "gitbook-plugin-expandable-chapters": "^0.2.0",
     "gitbook-plugin-prism": "^2.3.0",
     "highlight.js": "^9.4.0",
-    "immutability-helper": "^2.4.0",
+    "immutability-helper": "^2.6.4",
     "jquery": "^3.0.0",
     "js-yaml": "^3.6.1",
     "json-loader": "^0.5.4",
@@ -183,7 +183,7 @@
     "react-contextmenu": "^2.6.5",
     "react-copy-to-clipboard": "^5.0.0",
     "react-d3-cloud": "^0.5.0",
-    "react-dates": "16.0.1",
+    "react-dates": "16.0.2",
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "16.2.0",
@@ -197,7 +197,7 @@
     "react-redux": "^5.0.1",
     "react-router": "4.2.0",
     "react-router-dom": "^4.1.1",
-    "react-select": "^1.0.0-rc.5",
+    "react-select": "^1.2.0",
     "react-slick": "^0.16.0",
     "react-split-pane": "0.1.74",
     "react-table": "^6.7.6",
@@ -210,14 +210,14 @@
     "simplemde": "^1.11.2",
     "socket.io-client": "^2.0.3",
     "source-map-support": "^0.5.0",
-    "spectacle": "4.0.4",
+    "spectacle": "4.0.5",
     "style-loader": "^0.19.0",
     "svg-react-loader": "^0.4.5",
-    "uglify-es": "3.3.4",
+    "uglify-es": "3.3.5",
     "uniq": "^1.0.1",
     "utf-8-validate": "^4.0.0",
     "venn.js": "0.2.18",
-    "victory": "0.24.3",
+    "victory": "0.24.5",
     "webpack": "3.10.0"
   },
   "devEngines": {
