--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
   "homepage": "https://github.com/Planeshifter/isle-editor#readme",
   "devDependencies": {
     "babel": "^6.5.2",
-    "babel-eslint": "8.2.1",
+    "babel-eslint": "^8.2.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-webpack-loaders": "^0.9.0",
     "babel-polyfill": "^6.7.4",
@@ -134,7 +134,7 @@
     "configstore": "^3.0.0",
     "cross-env": "^5.1.3",
     "css": "^2.2.1",
-    "css-loader": "^0.28.0",
+    "css-loader": "^0.28.9",
     "css-modules-require-hook": "^4.2.3",
     "csv-parse": "^2.0.0",
     "csv-stringify": "^2.0.0",
@@ -183,7 +183,7 @@
     "react-contextmenu": "^2.6.5",
     "react-copy-to-clipboard": "^5.0.0",
     "react-d3-cloud": "^0.5.0",
-    "react-dates": "16.0.2",
+    "react-dates": "16.1.0",
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "16.2.0",
@@ -191,8 +191,8 @@
     "react-history": "^0.18.2",
     "react-input-range": "^1.2.1",
     "react-notification-system": "^0.2.7",
-    "react-player": "^0.25.0",
-    "react-plotly.js": "^1.0.2",
+    "react-player": "^1.0.0",
+    "react-plotly.js": "^1.2.0",
     "react-portal": "^4.1.2",
     "react-redux": "^5.0.1",
     "react-router": "4.2.0",
@@ -206,10 +206,10 @@
     "redux": "^3.4.0",
     "redux-thunk": "^2.0.1",
     "request": "2.83.0",
-    "semver": "^5.1.0",
+    "semver": "^5.5.0",
     "simplemde": "^1.11.2",
     "socket.io-client": "^2.0.3",
-    "source-map-support": "^0.5.0",
+    "source-map-support": "^0.5.1",
     "spectacle": "4.0.5",
     "style-loader": "^0.19.0",
     "svg-react-loader": "^0.4.5",
