--- a/package.json
+++ b/package.json
@@ -152,6 +152,7 @@
     "csv-parse": "^2.0.0",
     "csv-stringify": "^2.0.0",
     "d3": "4.13.0",
+    "d3-cloud": "1.2.4",
     "debug": "^3.1.0",
     "detect-csv": "^1.1.0",
     "dompurify": "^1.0.1",
@@ -195,11 +196,11 @@
     "react-color": "^2.2.7",
     "react-contextmenu": "^2.6.5",
     "react-copy-to-clipboard": "^5.0.0",
-    "react-d3-cloud": "^0.5.0",
     "react-dates": "16.2.1",
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "16.2.0",
+    "react-faux-dom": "3.1.0",
     "react-grid-layout": "^0.16.3",
     "react-input-range": "^1.2.1",
     "react-list": "^0.8.8",
